# embarcatech

./: CMakeLists.txt  CMake_test.c  README.md  embarcatech.code-workspace  linker_script.ld  main  main.c
01.ETAPA-online/JOYSTICK/joystick_display/: CMakeLists.txt  README.md  joystick_display.c
01.ETAPA-online/ZENITHIA/: main
01.ETAPA-online/ZENITHIA/Exercicio_2-Zenithia/: nivelCriticoZenithia_01.c
Exercicio_2-Zenithia/: nivelCriticoZenithia_01  nivelCriticoZenithia_02  nivelCriticoZenithia_02.c  nivelCriticoZenithia_03  nivelCriticoZenithia_03.c
U3_Teste do VScode/: numInvertido  numInvertido.c
WL55JC1/25.07.04_TDD_PYTEST_WL55JC1-BLINKER/: .gitignore
WL55JC1/25.07.04_TDD_PYTEST_WL55JC1-BLINKER/DOC/: README.md
WL55JC1/25.07.04_TDD_PYTEST_WL55JC1-BLINKER/DRIVERS/: hal_gpio.h
WL55JC1/25.07.04_TDD_PYTEST_WL55JC1-BLINKER/SRC/: blinker.c  blinker.h
WL55JC1/25.07.04_TDD_PYTEST_WL55JC1-BLINKER/TDD_NUCLEO_BLINKER/: .cproject  .mxproject  .project  TDD_BLINKER_V1 Debug.launch  TDD_BLINKER_V1.ioc
WL55JC1/25.07.04_TDD_PYTEST_WL55JC1-BLINKER/TDD_NUCLEO_BLINKER/Core/Inc/: blinker.h  main.h
WL55JC1/25.07.04_TDD_PYTEST_WL55JC1-BLINKER/TDD_NUCLEO_BLINKER/Core/Src/: hal_gpio_impl.c  main.c
WL55JC1/25.07.04_TDD_PYTEST_WL55JC1-BLINKER/TESTS/: test_blinker.py
